Ignorer le fichier du tableau de routage

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ log.txt
 npm-debug.log
 yarn-error.log
 
+#Typescript tableau de routage
+src/app/app-routing.module.ts
+
 # IDEs and editors
 .idea/
 .project
